# snakemake-storage-plugin-azure

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: further.md  intro.md
snakemake_storage_plugin_az/: __init__.py
snakemake_storage_plugin_azure/: __init__.py  utils.py
tests/: conftest.py  test_utils.py  tests.py
