[tool.poetry]
name = "snakemake-storage-plugin-azure"
version = "0.1.1"
description = "A Snakemake storage plugin to read and write from Azure Blob Storage"
authors = ["Jake VanCampen <jake.vancampen7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "1.14.3"
snakemake-interface-storage-plugins = "^2.1.0"
azure-storage-blob = "^12.19.0"
azure-core = "^1.29.5"
azure-identity = "^1.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = "^7.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
