[tool.poetry]
name = "snakemake-storage-plugin-azure"
version = "0.1.6"
description = "A Snakemake storage plugin to read and write from Azure Blob Storage"
authors = ["Jake VanCampen <jake.vancampen7@gmail.com>"]
repository = "https://github.com/snakemake/snakemake-storage-plugin-azure"
license = "MIT"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/azure.html"
readme = "README.md"
keywords = ["snakemake", "plugin", "storage", "azure"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.2"
snakemake-interface-storage-plugins = "^3.2.3"
azure-storage-blob = "^12.20.0"
azure-core = "^1.30.2"
azure-identity = "^1.17.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
